# Tasket

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  Makefile  components.json  env.example  middleware.ts  next.config.js  package.json  pnpm-lock.yaml
backend/: Dockerfile  alembic.ini  env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 012324f88b92_remove_unused_columns_from_models.py  05eeb4025788_initial_database_schema.py  2f14a4022334_initial_database_schema.py  4c3821fffb29_add_is_default_to_projects.py  4d001f6df8b8_remove_github_integrations_table.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  auth_fastapi.py  epics.py  github.py  milestones.py  notifications.py  projects.py  tags.py  tasks.py  users.py  websockets.py
backend/app/core/: auth.py  auth_helpers.py  auth_middleware.py  config.py  database.py  oauth.py  security.py  websocket.py
backend/app/models/: __init__.py  epic.py  github_integration.py  milestone.py  notification.py  project.py  task.py  user.py
backend/app/schemas/: __init__.py  auth.py  dashboard.py  epic.py  github.py  milestone.py  notification.py  project.py  tag.py  task.py  user.py
backend/app/services/: __init__.py  epic.py  github.py  google.py  milestone.py  notification.py  project.py  tag.py  task.py  user.py
frontend/: Dockerfile  env.example  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/app/notifications/: page.tsx
frontend/components/auth/: LoginModal.tsx
frontend/components/epic/: CreateEpicForm.tsx
frontend/components/layout/: AppLayout.tsx  ProjectsAccordion.tsx  SidebarHeader.tsx  UserSection.tsx
frontend/components/notifications/: NotificationList.tsx
frontend/components/project/: CreateProjectForm.tsx
frontend/components/tag/: TagManager.tsx
frontend/components/task/: CreateTaskForm.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: use-notifications.ts  use-project-mutations.ts  use-project.ts
frontend/lib/: api-client.ts  auth.ts
frontend/scripts/: generate-types.ts
frontend/types/: api.ts
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ErrorBoundary.tsx
src/contexts/: AuthContext.tsx
src/hooks/: use-dashboard.ts  use-project-mutations.ts  use-project.ts  use-theme.ts  use-toast.ts
src/lib/: api-client.ts  auth-options.ts  config.ts
src/stores/: auth-store.ts  project-store.ts
src/types/: api-common.ts  next-auth.d.ts
(+84 files in other folders)
